--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html {
+  scroll-behavior: "smooth";
+}
 body {
   font-family: "Bebas Neue", "sans-serif";
 }
