feat: finished the fetch of related trips in trip page and the fetch types of trips in trips page and handle the errors by create a not found page and error page and init the loading component and set loaders by lottiefiles package

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ body {
   -webkit-text-fill-color: white;
   -webkit-text-stroke: 1px rgb(84, 89, 95);
 }
+.error-stroke {
+  -webkit-text-fill-color: rgb(0, 0, 0);
+  -webkit-text-stroke: 1px rgb(218, 20, 20);
+}
 
 .stroke-fill::after {
   -webkit-text-fill-color: #bfa888;
