feat: deleted the unused animations and edit some animation names and finished the login translation and validation schema and fix the booktripform date field and country field and used google recaptcha  to prevent the doss attack when someone try to send many messages to destroy the backend

--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,21 @@ html[lang="ru"] body {
     font-size: 17px;
   }
 }
+.recaptcha {
+  width: fit-content;
+}
+.recaptcha > div > div {
+  width: 100% !important;
+}
+
+.recaptcha iframe {
+  width: 200px !important;
+}
+@media (min-width: 1300px) {
+  .recaptcha div {
+    width: 100%;
+  }
+  .recaptcha iframe {
+    width: 300px !important;
+  }
+}
